--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 #title {
-    text-align: center;
+    text-align:center;
     width: 100%;
     height: 100%;
     font-size: 5em;
@@ -12,6 +12,7 @@
     font-family: fantasy;
     margin: 0px;
     margin-left: 0px;
+    
 }
 
 
@@ -102,6 +103,9 @@
     margin-bottom: 100px;
     margin-right: 15px;
     background-color: white;
+  }
+  .container p {
+    font-size: .8em;
   }
   
   /* Add rounded corners to the top left and the top right corner of the image */
